resolve the card in the index page - home

--- a/styles/client/Campaign.module.css
+++ b/styles/client/Campaign.module.css
@@ -4,9 +4,13 @@
 }
 
 .wrapper {
-  width: 80%;
+  width: 100%;
   /* background-color: red; */
   margin: 0 auto;
+}
+
+.textSm {
+  font-size: 0.7rem;
 }
 
 .isPostulateActive {
