--- a/styles/jobs/JobByIdStyles.module.css
+++ b/styles/jobs/JobByIdStyles.module.css
@@ -1,5 +1,9 @@
 .icon {
   width: 40px;
+  cursor: pointer;
+}
+.wrapper {
+  width: 100%;
 }
 
 .iconContainer {
@@ -9,6 +13,10 @@
 }
 .infoHero {
   /* border: 3px solid brown; */
+}
+.infoHero h1 {
+  font-size: 1.5rem;
+  text-align: start;
 }
 .hero {
   color: var(--bg-black200);
@@ -21,6 +29,7 @@
   align-items: center;
   padding: 20px;
   height: 250px;
+  gap: 1rem;
 }
 
 .buttonApply {
@@ -45,4 +54,16 @@
 
 .infoContainer p {
   font-size: 20px;
+}
+
+@media (min-width: 768px) {
+  .infoHero h1 {
+    font-size: 2.5rem;
+    text-align: start;
+  }
+  .wrapper {
+    width: 90%;
+    margin: 0 auto;
+    /* border: 2px solid brown; */
+  }
 }
