--- a/styles/employees/FormToDeleteExp.module.css
+++ b/styles/employees/FormToDeleteExp.module.css
@@ -1,7 +1,7 @@
 .formExpGrid {
   padding: 2rem;
   border-radius: 0.5rem;
-  background-color: var(--bg-blueLight);
+  /* background-color: var(--bg-blueLight); */
   height: 300px;
 }
 
