--- a/styles/employees/ShowServiceById.module.css
+++ b/styles/employees/ShowServiceById.module.css
@@ -1,5 +1,5 @@
 .showServiceGrid {
-  background-color: var(--bg-blueLight);
+  /* background-color: var(--bg-blueLight); */
   padding: 1rem;
   border-radius: 0.5rem;
   position: relative;
