--- a/styles/admin/TableEmployee.module.css
+++ b/styles/admin/TableEmployee.module.css
@@ -2,7 +2,14 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   grid-template-rows: 100px;
-  column-gap: 1rem;
+  column-gap: 3rem;
+}
+
+.item {
+  /* border: 3px solid brown; */
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .actions {
@@ -46,4 +53,3 @@
 .titleExp span {
   font-weight: normal;
 }
-
