--- a/styles/employees/Experience.module.css
+++ b/styles/employees/Experience.module.css
@@ -1,5 +1,5 @@
 .formGrid {
-  background-color: var(--bg-blueLight);
+  /* background-color: var(--bg-blueLight); */
   padding: 2rem;
   border-radius: 0.5rem;
   position: relative;
