--- a/styles/employees/Layout.module.css
+++ b/styles/employees/Layout.module.css
@@ -19,7 +19,6 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
-
   /* min-height: 100vh; */
 }
 
@@ -39,15 +38,16 @@
 .active {
   width: 100%;
   position: fixed;
-  height: 100vh;
+  height: 100%;
   background-color: var(--bg-blueLight);
   z-index: 50000;
 }
 
 .mainProfile {
   padding: 1rem;
+  /* border: 3px solid brown; */
 
-  /* overflow-y: auto; */
+  overflow: auto;
 }
 
 .mainProfile h1 {
