--- a/styles/client/Campaign.module.css
+++ b/styles/client/Campaign.module.css
@@ -18,8 +18,13 @@
 }
 
 .mainContainer {
-  /* margin-block: 100px; */
-  /* border: 3px solid brown; */
+}
+
+.loadingContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .servicesGrid {
@@ -33,6 +38,11 @@
 
   /* border: 3px solid brown; */
   /* overflow-y: auto; */
+}
+.setect {
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 1rem;
 }
 
 .title {
@@ -48,8 +58,8 @@
 
 .card {
   border: 1px solid #e1e1e1;
-  /* border: 1px solid brown; */
-
+   
+ 
   border-radius: 0.5rem;
   overflow: auto;
 
@@ -255,5 +265,11 @@
   }
   .cardContainer {
     flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 1024px ) {
+  .card {
+    min-width: 1000px;	
   }
 }
